Fixing product card alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,28 @@
+.product-filter {
+  /*
+  Make the height of the filter tab as the height of the screen minus
+  the height of the header (7 rem) and the height of the footer (7 rem)
+  */
+  height: calc(100vh - 14rem);
+}
 
 .product-card {
-  border: 5px solid rgb(153 27 27); /* equivalent to tailwind class: bg-red-800 */
   margin: 10px;
-  height: 250px;
-  width: 250px;
-  display: flex;
-  flex-direction: column;
+  
 }
 
 .product-picture-box img {
-  aspect-ratio: 1/1;
+  aspect-ratio: 1;
   margin-top: 10px;
   border-radius: 20px;
   border-color: white;
-  border-width: 10px;
-  width: auto; /* calc(60) */
-  height: calc(60%);
+  width: calc(100%);
+  height: auto;
 }
 
-.product-description {
-  display: flex;
-
-  white-space: nowwrap;
-}
 
 /* In case a user provides too long of a name we must check and deal with text overflow */
 h2, h3, h4 {
   overflow: hidden;
   text-overflow: ellipsis;
-  flex: 0 auto;
 }
